finish switch theme function , add color picker for note in create note form (only HTML/CSS)

--- a/css/style.css
+++ b/css/style.css
@@ -35,18 +35,28 @@
         --cl-light-blue : #74aaac;
     
     
-        --cl-bg: #1f1d2b;
+        /* --cl-bg: #1f1d2b;
         --cl-item: #272636;
+        --cl-text: #9695a7;
+        --cl-title: #f6f6f6;
+        --cl-logo: white;
+        --cl-btn-active: white;
+        --cl-btn-icon: #08070d;
+        --cl-content-unactive: #494554;
+        --cl-nav-link:#f6b846;
+        --btn-overlay: #74aaac; */
+        --bs-item : 5px 5px 10px rgba(0,0,0,0.2);
+
         --cl-bg-light: #1e1b2b;
         --cl-content: #9695a7;
-        --cl-content-unactive: #494554;
+        
         --cl-title: #e4e4e4;
-        --cl-nav-link:#f6b846;
-    
+        
         
         --cl-tag: rgb(72, 180, 121);
         --ts-tag: 0px 0px 5px rgb(92, 230, 154);
 
+        /* BOX SHADOW */
 }
 
 *,
@@ -68,7 +78,49 @@ body {
     font-family: var(--ff-normal);
     line-height: 1.5;
     background: var(--cl-bg);
+    transition: background 0.4s ease-in-out;
 }
+
+.dark .icon-light,
+.light .icon-dark {
+    display: none;
+}
+
+.dark {
+    --cl-bg: #1f1d2b;
+    --cl-item: #272636;
+    --cl-text: #9695a7;
+    --cl-title: #f6f6f6;
+    --cl-logo: white;
+    --cl-btn-active: white;
+    --cl-btn-icon: #08070d;
+    --cl-content-unactive: #494554;
+    --cl-nav-link:#f6b846;
+    --btn-overlay: #74aaac;
+    --bs-item : 5px 5px 10px rgba(0,0,0,0.2);
+
+    --cl-btn2-unactive: #3f3a47;
+    --cl-btn2-active: #74aaac;
+    --cl-text-active: var(--cl-black);
+}
+.light {
+    --cl-bg: #f7f8fb;
+    --cl-item: white;
+    --cl-text: --cl-black;
+    --cl-title: black;
+    --cl-logo: black;
+    --cl-btn-active: black;
+    --cl-btn-icon: white;
+    --cl-content-unactive: #d1cfd6;
+    --cl-nav-link:#a35304;
+    --btn-overlay: #08070d;
+
+    --cl-btn2-unactive: white;
+    --cl-btn2-active: black;
+    --cl-text-active: white;
+
+}
+
 a {
     -webkit-tap-highlight-color:transparent;
     display: inline-block;
@@ -110,7 +162,7 @@ ul {
 }
     /* APP TITLE */
     .title {
-        color: rgb(255, 255, 255);
+        color: var(--cl-logo);
         font-weight: 600;
         letter-spacing: 2px;
         font-family: var(--ff-title);
@@ -124,12 +176,16 @@ ul {
         pointer-events: none;
     }
     .header-nav > a.active {
-        color: white;
+        color: var(--cl-btn-active);
     }
+    .header-nav .theme {
+        pointer-events: unset;
+    }
+
     /* TOGGLE STYLE */
 
     .header-nav > .btn-active {
-        color: white;
+        color: var(--cl-btn-active);
         pointer-events: unset;
     }
 
@@ -184,20 +240,26 @@ ul {
        line-height: 70px;
        position: fixed;
        bottom: 50px;right: 15%;
-       background: var(--cl-light-blue);
+       background: var(--btn-overlay);
        border-radius: 50%;
        text-align: center;
-       color: var(--cl-black);
+       color: var(--cl-btn-icon);
        z-index: -1;
        opacity: 0;
        transition: 0.3s ease-in-out;
        pointer-events: unset;
 
    }
+   .flaticon-add-file {
+    color: currentColor;
+    padding-left: 8px;
+    font-size: var(--fs-icon);
+}
    .main-content .btn-folder-section {
         right: 50%;
         transform: translateX(35px);
     }
+    /* ADD NOTE TO FOLDER BTN */
    .main-content .add-folder-section {
         position: fixed;
         bottom: 50px;
@@ -205,8 +267,8 @@ ul {
         transform: translateX(70px);
        border-radius: 20px;
        font-weight: var(--fw-light-bold);
-       color: var(--cl-content);
-       background-color: var(--cl-dark-gray);
+       color: var(--cl-content-unactive);
+       background-color: var(--cl-btn2-unactive);
        padding: 10px 20px;
        transition: 0.4s ease-in-out;
        pointer-events: none;
@@ -216,10 +278,11 @@ ul {
        display: inline-block;
    }
    section[data-content="folder-section"] .active {
-       background: var(--cl-light-blue);
-       color: var(--cl-black);
+       background: var(--cl-btn2-active);
+       color: var(--cl-text-active);
        pointer-events: unset;
    }
+   /* END ADD NOTE TO FOLDER BTN */
    section[data-content="note"] .show-add-note, 
    section[data-content="folder"] .show-add-folder, 
    section[data-content="folder-section"] .btn-folder-section {
@@ -231,15 +294,13 @@ ul {
        z-index: 10;
    } */
 
-   .flaticon-add-file {
-       color: var(--cl-black);
-       padding-left: 8px;
-       font-size: var(--fs-icon);
-   }
+
 /* LIST */
 .note,
 .folder {
     margin: 0 5px;
+    box-shadow: var(--bs-item);
+    border: 2px solid var(--cl-item);
 }
     /* NOTE STYLE */
     .message {
@@ -254,10 +315,10 @@ ul {
     .note {
         width: 100%;
         background-color: var(--cl-item);
-        border: 2px solid var(--cl-item);
+        
         padding: 20px;
         border-radius: 20px;
-        color: #9695a7;
+        color: var(--cl-text);
 
         /* display: flex;
         flex-direction: column;
@@ -267,14 +328,15 @@ ul {
         overflow-wrap: break-word;
         hyphens: auto;
 
-        transition: 0.2s ease-in-out;
+        transition: width 0.2s ease-in-out,
+                    background-color 0.2s ease-in-out;
         margin-bottom: 5vh;
         cursor: pointer;
     }
         /* NOTE TITLE */
         .note__title {
             font-size: var(--fs-body-big);
-            color: #f6f6f6;
+            color: var(--cl-title);
             padding-bottom: 15px;
             font-weight: var(--fw-extra-normal);
         }
@@ -326,11 +388,12 @@ section[data-content="folder"] .gutter-sizer {
     /* BREAK WORD WHEN TOO LONG */
     word-break: break-word;
     overflow-wrap: break-word;
-    transition: 0.2s ease-in-out;
+    transition: width 0.2s ease-in-out,
+                background-color 0.2s ease-in-out;
 }
     .folder__title {
         text-align: center;
-        color: white;
+        color: var(--cl-title);
 
         font-size: var(--fs-body-big);
     }
@@ -358,7 +421,7 @@ section[data-content="folder-section"] .folder-section__title {
     justify-content: space-around;
     align-items: center;
     padding-bottom: 5vh;
-    color: white;
+    color: var(--cl-title);
 
 }
 .folder-section__title > h2 {
@@ -407,9 +470,12 @@ section[data-content="folder-section"] .folder-section__title {
 #confirm_delete_form {
     width: 100%;
     max-width: 600px;
-    background-color: var(--cl-nav-link);
+    background-color: #f6b846;
     border-radius: 20px;
     padding: 20px;
+}
+.add-note-wrapper {
+    padding: 20px 0;
 }
 /* FORM */
 
@@ -426,7 +492,9 @@ section[data-content="folder-section"] .folder-section__title {
 }
 .form-group {
     margin-bottom: 3vh;
+    padding: 0 20px;
 }
+
 .title-form {
     font-family: var(--ff-title);
     font-size: var(--fs-h3);
@@ -446,7 +514,7 @@ section[data-content="folder-section"] .folder-section__title {
     border-radius: 20px;
     outline: none;
     border: 2px solid var(--cl-black);
-    background-color: var(--cl-nav-link);
+    background-color: #f6b846;
     color: var(--cl-black);
     font-size: var(--fs-body-big);
     padding: 15px 10px;
@@ -474,7 +542,7 @@ section[data-content="folder-section"] .folder-section__title {
     border-radius: 20px;
     outline: none;
     border: 2px solid var(--cl-black);
-    background: var(--cl-nav-link);
+    background-color: #f6b846;
     font-weight: var(--fw-extra-bold);
     transition: 0.3s ease-in-out;
 }
@@ -495,7 +563,64 @@ section[data-content="folder-section"] .folder-section__title {
 #folder-title::placeholder {
     color: var(--cl-black);
 }
+/* COLOR PICKER */
+/* .color-wrapper  {
+    padding: 0;
+} */
+/* yellow #ffda47  orange #ff7746 blue #0aebaf #3369ff red #ff7746  purple #cf93d9*/
+.color-picker {
+    padding: 20px 10px;
+    background-color: rgb(233, 233, 233);
+    background-color: #171c26;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 20px;
+}
+.color-picker > li {
+    width: 40px;
+    height: 40px;
+    position: relative;
+    border-radius: 50%;
 
+}
+    /* color: rgb(0, 255, 255); */
+.color-picker > li[data-color="white"] {color: white;}
+.color-picker > li[data-color="black"] {color: #272636;}
+.color-picker > li[data-color="yellow"] {color: #ffda47;}
+.color-picker > li[data-color="bluesky"] {color: #0aebaf;}
+.color-picker > li[data-color="green"] {color: rgb(123, 255, 47);}
+    .color-picker > li > span {
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;height: 100%;
+        border-radius: 50%;
+        transition: 0.3s ease;
+    }
+    .color-picker > li > .circle {
+        background-color: currentColor;
+        transform: scale(1);
+    }
+    .color-picker > li > .outline {
+        border: 2px solid currentColor;
+        transform: scale(0);
+    }
+    .color-picker > li:hover {
+        /* box-shadow: 0px 0px 20px rgba(255,255,255,0.2); */
+        box-shadow: 0px 0px 20px currentColor;
+    }
+    .color-picker > li[data-color="black"]:hover {
+        /* box-shadow: 0px 0px 20px rgba(255,255,255,0.2); */
+        box-shadow: 0px 0px 20px white;
+    }
+    .color-picker > li:hover > .circle  {
+        /* transform: scale(0.7); */
+    }
+    .color-picker > li:hover > span {
+        transform: scale(1);
+    }
 
 @media (min-width:400px) {
     #create_folder_form {
@@ -525,7 +650,7 @@ section[data-content="folder-section"] .folder-section__title {
         width: 4%;
     } */
     section[data-content="folder"] .list .folder {
-        width: 48%;
+        width: 46%;
     }
 }
 @media (min-width:800px) {
