reorganize file structure , add comment in html and css file

--- a/css/remove2.css
+++ b/css/remove2.css
@@ -1,3 +1,4 @@
+/* VERSION : 2 */
 :root {
     --ff-title:  'Redressed', cursive;
     --ff-normal: 'Poppins', sans-serif;
@@ -321,14 +322,11 @@ ul {
 
 
 /* LIST */
-.main-content .list-wrapper .list {
-    margin: 0;
-}
 .note,
 .folder {
     box-shadow: var(--bs-item);
     border: 2px solid transparent;
-    width: 100%;
+    
 }
     /* NOTE STYLE */
     .message {
@@ -341,7 +339,7 @@ ul {
         width: 0;
     }
     .note {
-
+        width: 100%;
         background-color: var(--cl-item);
         
         padding: 20px;
@@ -408,6 +406,7 @@ section[data-content="folder"] .gutter-sizer {
     width: 0;
 }
 .folder {
+    width: 100%;
     background-color: var(--cl-item);
     display: flex;
     flex-direction: column;
@@ -665,7 +664,7 @@ section[data-content="folder-section"] .folder-section__title {
     */
 
 
-    .color-picker .active
+
 
 @media (min-width:400px) {
     #create_folder_form {
@@ -685,12 +684,18 @@ section[data-content="folder-section"] .folder-section__title {
     section[data-content="folder-section"] {
         padding: 0 5vw;
     }
-    section[data-content="folder"] .list .gutter-sizer {
-        width: 4%;
+    section[data-content="folder"] .list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
     }
+    /* section[data-content="folder"] .list .gutter-sizer {
+        width: 4%;
+    } */
     section[data-content="folder"] .list .folder {
-        width: 48%;
-        margin-bottom: 3vh;
+        width: 46%;
+        margin: 0 5px 3vh;
     }
 }
 @media (min-width:800px) {
@@ -704,14 +709,20 @@ section[data-content="folder-section"] .folder-section__title {
     section[data-content="folder-section"] {
         padding: 0;
     }
-        section[data-content="note"] .gutter-sizer,
+    .list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        /* align-items: center; */
+    }
+        /* section[data-content="note"] .gutter-sizer,
         section[data-content="folder-section"] .gutter-sizer {
             width: 4%;
-        }
+        } */
         section[data-content="note"] .note,
         section[data-content="folder-section"] .note {
             width: 48%;
-            margin-bottom: 3vh;
+            margin: 0 5px 3vh;
         }
         /* FOLDER */
         /* section[data-content="folder"] .list .gutter-sizer {
@@ -720,16 +731,15 @@ section[data-content="folder-section"] .folder-section__title {
         section[data-content="folder"] .list .folder {
             width: calc(92% / 4);
         }
-}
 
 @media (min-width:1200px) {
     /* .main-wrapper {
         max-width: 1300px;
     } */
-    section[data-content="note"] .gutter-sizer,
+    /* section[data-content="note"] .gutter-sizer,
     section[data-content="folder-section"] .gutter-sizer {
         width: 2%;
-    }
+    } */
     section[data-content="note"] .note,
     section[data-content="folder-section"] .note {
         width: 32%;
@@ -739,13 +749,13 @@ section[data-content="folder-section"] .folder-section__title {
     .main-wrapper {
         max-width: 1200px;
     }
-        section[data-content="note"] .gutter-sizer,
+        /* section[data-content="note"] .gutter-sizer,
         section[data-content="folder-section"] .gutter-sizer {
             width: calc(8% / 3);
-        }
+        } */
         section[data-content="note"] .note,
         section[data-content="folder-section"] .note {
-            width: calc(92% /4);
+            width: 24%;
         }
         section[data-content="folder"] {
             padding: 0 5vw;
