--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+/* 
+    Style for : index.html (Notes project)
+    DESCRIPTION : HTML,CSS,JS,ISOTOPE LIB
+    AUTHOR : LUC CHAN PHONG
+    VERSION : 3
+*/
+/* 
+==================TABLE OF CONTENT =======================
+1. INITIAL SETTING
+2. HEADER
+3. NAV BAR
+4. DISPLAY SECTION
+5. OVERLAY
+6. RESPONSIVE
+*/
+
+/* ===============INITIAL SETTING==================== */
 :root {
     --ff-title:  'Redressed', cursive;
     --ff-normal: 'Poppins', sans-serif;
@@ -35,16 +52,6 @@
         --cl-light-blue : #74aaac;
     
     
-        /* --cl-bg: #1f1d2b;
-        --cl-item: #272636;
-        --cl-text: #9695a7;
-        --cl-title: #f6f6f6;
-        --cl-logo: white;
-        --cl-btn-active: white;
-        --cl-btn-icon: #08070d;
-        --cl-content-unactive: #494554;
-        --cl-nav-link:#f6b846;
-        --btn-overlay: #74aaac; */
         --bs-item : 5px 5px 10px rgba(0,0,0,0.2);
 
         --cl-bg-light: #1e1b2b;
@@ -56,7 +63,6 @@
         --cl-tag: rgb(72, 180, 121);
         --ts-tag: 0px 0px 5px rgb(92, 230, 154);
 
-        /* BOX SHADOW */
 }
 
 *,
@@ -165,7 +171,7 @@ ul {
     position: relative;
 }
 
-/* HEADER */
+/* =============== HEADER ==================== */
 .header {
     margin: 0 auto;
     max-width: 800px;
@@ -204,9 +210,11 @@ ul {
         pointer-events: unset;
     }
 
- 
-/* END HEADER */
-/* NAV LINK */
+/* =============== END HEADER ==================== */
+
+
+
+/* =============== NAV LINK  ==================== */
 .nav-link__wrapper   {
     width: 100%;
     display: flex;
@@ -235,7 +243,11 @@ ul {
         transition: 0.3s ease-in-out;
     }
 
-/* END NAV LINK */
+/* =============== END NAV LINK ==================== */
+
+
+
+/* =============== DISPLAY SECTION  ==================== */
 /* MAIN CONTENT */
 .main-content {
     /* width: 200%; */
@@ -282,7 +294,7 @@ ul {
         color: var(--cl-content-unactive);
         background-color: var(--cl-btn2-unactive);
     }
-    /* ADD NOTE TO FOLDER BTN */
+
    .main-content .add-folder-section {
         position: fixed;
         bottom: 50px;
@@ -297,6 +309,8 @@ ul {
        pointer-events: none;
        display: none;
    }
+
+   /* LOGIC WITH JS */
    section[data-content="folder-section"] .show {
        display: inline-block;
    }
@@ -306,7 +320,7 @@ ul {
        color: var(--cl-text-active);
        pointer-events: unset;
    }
-   /* END ADD NOTE TO FOLDER BTN */
+
    section[data-content="note"] .show-add-note, 
    section[data-content="folder"] .show-add-folder, 
    section[data-content="folder"] .select-folder, 
@@ -314,18 +328,21 @@ ul {
         opacity: 1;
         z-index: 10;
    }
-   /* .main-content .show-add-active {
-       opacity: 1;
-       z-index: 10;
-   } */
+
 
 
 /* LIST */
+.main-content .list-wrapper .list {
+    margin: 0; 
+    transition: 0.4s ease-in-out;
+}
 .note,
 .folder {
     box-shadow: var(--bs-item);
     border: 2px solid transparent;
-    
+    width: 100%;
+    transition: width 0.2s ease-in-out,
+    background-color 0.2s ease-in-out;
 }
     /* NOTE STYLE */
     .message {
@@ -338,30 +355,20 @@ ul {
         width: 0;
     }
     .note {
-        width: 100%;
         background-color: var(--cl-item);
-        
         padding: 20px;
         border-radius: 20px;
-        /* color: var(--cl-text); */
-
-        /* display: flex;
-        flex-direction: column;
-        justify-content: center; */
         /* BREAK WORD WHEN TOO LONG */
         word-break: break-word;
         overflow-wrap: break-word;
         hyphens: auto;
 
-        transition: width 0.2s ease-in-out,
-                    background-color 0.2s ease-in-out;
         margin-bottom: 5vh;
         cursor: pointer;
     }
         /* NOTE TITLE */
         .note__title {
             font-size: var(--fs-body-big);
-            /* color: var(--cl-title); */
             padding-bottom: 15px;
             font-weight: var(--fw-extra-normal);
         }
@@ -384,10 +391,9 @@ ul {
         .note__tag {
             text-align: right;
             color: #222;
-            /* font-weight: var(--fw-extra-normal); */
         }
         /* END NOTE STYLE */
-    /* SELECTED FOR NOTE AND FOLDER SECTION*/
+    /* SELECTED FOR NOTE AND FOLDER SECTION (JS)*/
     .light section[data-content="note"] .selected,
     .light section[data-content="folder-section"] .selected {
         border: 2px solid;
@@ -397,7 +403,7 @@ ul {
         box-shadow: 0 0 30px rgba(255, 255, 255, 0.5),
                     0 0 40px rgba(255, 255, 255, 0.2);
     }
-/* FOLDER STYLE */
+/* FOLDER STYLE (JS)*/
 section[data-content="folder"] {
     padding: 0 10vw;
 }
@@ -405,7 +411,6 @@ section[data-content="folder"] .gutter-sizer {
     width: 0;
 }
 .folder {
-    width: 100%;
     background-color: var(--cl-item);
     display: flex;
     flex-direction: column;
@@ -419,8 +424,7 @@ section[data-content="folder"] .gutter-sizer {
     /* BREAK WORD WHEN TOO LONG */
     word-break: break-word;
     overflow-wrap: break-word;
-    transition: width 0.2s ease-in-out,
-                background-color 0.2s ease-in-out;
+
 }
     .folder__title {
         text-align: center;
@@ -428,7 +432,7 @@ section[data-content="folder"] .gutter-sizer {
 
         font-size: var(--fs-body-big);
     }
-/* SELECTED FOLDER */
+/* SELECTED FOLDER (JS) */
 .light section[data-content="folder"] .selected {
     background-color: #222;
 }
@@ -438,7 +442,6 @@ section[data-content="folder"] .gutter-sizer {
 
 /* FOLDER SECTION */
 .folder-section {
-    /* float: left; */
     width: 100%;
     position: absolute;
     top: 0;
@@ -446,12 +449,12 @@ section[data-content="folder"] .gutter-sizer {
     z-index: -1;
     opacity: 0;
     visibility: hidden;
-    /* min-height: 80vh; */
     transition: opacity 0.3s ease-in-out;
 }
 .folder-section__title {
     display: none;
 }
+/* (JS) */
 section[data-content="folder-section"] .folder-section__title {
     width: 100%;
     display: block;
@@ -465,17 +468,16 @@ section[data-content="folder-section"] .folder-section__title {
     font-weight: var(--fw-extra-normal);
 
 }
-.folder-section__title .return_folder {
+.folder-section__title .return_folder-section {
     cursor: pointer;
     font-size: var(--fs-body-big);
 }
 
 
 /* END FOLDER STYLE */
+/* =============== END DISPLAY SECTION  ==================== */
 
-/* END MAIN CONTENT */
-
-/* OVERLAY */
+/* =============== OVERLAY  ==================== */
 .add-note-overlay,
 .edit-note-overlay,
 .folder-overlay,
@@ -495,7 +497,6 @@ section[data-content="folder-section"] .folder-section__title {
 }
 .add-note-overlay,
 .edit-note-overlay {
-    /* background: #1f1d2b; */
     text-align: center;
 }
 .show_overlay {
@@ -604,14 +605,11 @@ section[data-content="folder-section"] .folder-section__title {
     color: var(--cl-black);
 }
 /* COLOR PICKER */
-/* .color-wrapper  {
-    padding: 0;
-} */
-/* yellow #ffda47  orange #ff7746 blue #0aebaf #3369ff red #ff7746  purple #cf93d9*/
+
+
 .color-picker {
     padding: 20px 10px;
     background-color: rgb(29, 27, 27);
-    /* background-color: #171c26; */
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -624,12 +622,15 @@ section[data-content="folder-section"] .folder-section__title {
     border-radius: 50%;
     cursor: pointer;
 }
-    /* color: rgb(0, 255, 255); */
+/* COLOR LIST  */
+/* yellow #ffda47  orange #ff7746 blue #0aebaf #3369ff red #ff7746  purple #cf93d9*/
+
 .color-picker > li[data-color="white"] {color: white;}
 .color-picker > li[data-color="red"] {color: #ff7746;}
 .color-picker > li[data-color="yellow"] {color: #ffda47;}
 .color-picker > li[data-color="bluesky"] {color: #0aebaf;}
 .color-picker > li[data-color="green"] {color: #7bff2f;}
+
     .color-picker > li > span {
         display: inline-block;
         position: absolute;
@@ -655,16 +656,12 @@ section[data-content="folder-section"] .folder-section__title {
         .color-picker > .active > .circle {
         transform: scale(0.7);
     }
-    /* .color-picker > li[data-color="black"]:hover {
-        box-shadow: 0px 0px 20px white;
-         box-shadow: 0px 0px 20px rgba(255,255,255,0.2); 
-        box-shadow: 0px 0px 20px currentColor; 
-        } 
-    */
+/* =============== END OVERLAY  ==================== */
 
 
-    .color-picker .active
 
+
+/* =============== RESPONSIVE  ==================== */
 @media (min-width:400px) {
     #create_folder_form {
         padding: 40px 20px;
@@ -675,26 +672,19 @@ section[data-content="folder-section"] .folder-section__title {
     .main-wrapper {
         max-width: 600px;
     }
-    .list {
-        transition: 0.4s ease-in-out;
-    }
+
     section[data-content="folder"],
     section[data-content="note"],
     section[data-content="folder-section"] {
         padding: 0 5vw;
     }
-    section[data-content="folder"] .list {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-
-    }
-    /* section[data-content="folder"] .list .gutter-sizer {
+    /* FOLDER 2 COLUMN */
+    section[data-content="folder"] .list .gutter-sizer {
         width: 4%;
-    } */
+    }
     section[data-content="folder"] .list .folder {
-        width: 46%;
-        margin: 0 5px 3vh;
+        width: 48%;
+        margin-bottom: 3vh;
     }
 }
 @media (min-width:800px) {
@@ -708,55 +698,59 @@ section[data-content="folder-section"] .folder-section__title {
     section[data-content="folder-section"] {
         padding: 0;
     }
-    .list {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        /* align-items: center; */
-    }
-        /* section[data-content="note"] .gutter-sizer,
+        /* NOTE 2 COLUMN */
+        section[data-content="note"] .gutter-sizer,
         section[data-content="folder-section"] .gutter-sizer {
             width: 4%;
-        } */
+        }
         section[data-content="note"] .note,
         section[data-content="folder-section"] .note {
             width: 48%;
-            margin: 0 5px 3vh;
+            margin-bottom: 3vh;
         }
-        /* FOLDER */
-        /* section[data-content="folder"] .list .gutter-sizer {
-            width: 2%;
-        } */
+        /* FOLDER  3 COLUMN*/
+        section[data-content="folder"] .list .gutter-sizer {
+            width: calc(8% / 2);
+        }
         section[data-content="folder"] .list .folder {
-            width: calc(92% / 4);
+            width: calc(92% / 3);
         }
+}
 
 @media (min-width:1200px) {
-    /* .main-wrapper {
-        max-width: 1300px;
-    } */
-    /* section[data-content="note"] .gutter-sizer,
+    /* NOTE 3 COLUMN */
+    section[data-content="note"] .gutter-sizer,
     section[data-content="folder-section"] .gutter-sizer {
         width: 2%;
-    } */
+    }
     section[data-content="note"] .note,
     section[data-content="folder-section"] .note {
         width: 32%;
+    }
+    /* FOLDER 4 COLUMN */
+    section[data-content="folder"] .list .gutter-sizer {
+        width: calc(8% / 3);
+    }
+    section[data-content="folder"] .list .folder {
+        width: calc(92% / 4);
     }
 }
 @media (min-width:1400px) {
     .main-wrapper {
         max-width: 1200px;
     }
-        /* section[data-content="note"] .gutter-sizer,
+    section[data-content="folder"] {
+        padding: 0 5vw;
+    }
+
+        /* NOTE 4 COLUMN */
+        section[data-content="note"] .gutter-sizer,
         section[data-content="folder-section"] .gutter-sizer {
             width: calc(8% / 3);
-        } */
+        }
         section[data-content="note"] .note,
         section[data-content="folder-section"] .note {
-            width: 24%;
+            width: calc(92% /4);
         }
-        section[data-content="folder"] {
-            padding: 0 5vw;
-        }
+
 }
