--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 */
 /* 
 ==================TABLE OF CONTENT =======================
+0. PRELOAD (LOAD ANIMATON)
 1. INITIAL SETTING
 2. HEADER
 3. NAV BAR
@@ -85,6 +86,7 @@ body {
     line-height: 1.5;
     background: var(--cl-bg);
     transition: background 0.4s ease-in-out;
+    position: relative;
 }
 
 .dark .icon-light,
@@ -161,6 +163,7 @@ ul {
 /* MAIN */
 .main {
     width: 100%;
+    transition: 0.4s ease-in-out;
 }
 .main-wrapper {
     width: 100%;
@@ -170,7 +173,117 @@ ul {
     padding: 0 20px;
     position: relative;
 }
-
+/* =============== PRELOAD ANIMATION ==================== */
+.preload-wrapper {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;left: 0;
+    z-index: 9999;
+    background-color: #1f1d2b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s ease-in-out;
+}
+/* .preload__loader {
+    width: 150px;height: 150px;
+    border-radius: 50%;
+    border: 10px solid #f3f3f3;
+    border-top-color: blue;
+    animation: loading 1s linear infinite;
+}
+@keyframes loading {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+} */
+.lds-roller {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-roller div {
+    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+  }
+  .lds-roller div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: #fff;
+    margin: -4px 0 0 -4px;
+  }
+  .lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+  }
+  .lds-roller div:nth-child(1):after {
+    top: 63px;
+    left: 63px;
+  }
+  .lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+  }
+  .lds-roller div:nth-child(2):after {
+    top: 68px;
+    left: 56px;
+  }
+  .lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+  }
+  .lds-roller div:nth-child(3):after {
+    top: 71px;
+    left: 48px;
+  }
+  .lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+  }
+  .lds-roller div:nth-child(4):after {
+    top: 72px;
+    left: 40px;
+  }
+  .lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+  }
+  .lds-roller div:nth-child(5):after {
+    top: 71px;
+    left: 32px;
+  }
+  .lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+  }
+  .lds-roller div:nth-child(6):after {
+    top: 68px;
+    left: 24px;
+  }
+  .lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+  }
+  .lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+  }
+  .lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+  }
+  .lds-roller div:nth-child(8):after {
+    top: 56px;
+    left: 12px;
+  }
+  @keyframes lds-roller {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  
+/* =============== END PRELOAD ==================== */
 /* =============== HEADER ==================== */
 .header {
     margin: 0 auto;
