need to add more image to make it look cool

--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,13 @@ ul {
     padding: 0 20px;
     position: relative;
 }
+/* =============== BG IMG ==================== */
+.bg-img {
+    position: absolute;
+    top: 20%;
+    left: 0;
+}
+/* =============== END BG IMG ==================== */
 /* =============== PRELOAD ANIMATION ==================== */
 .preload-wrapper {
     width: 100%;
