--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ ul {
 .folder {
     -webkit-tap-highlight-color:transparent;
 }
-
+/* ===============END INITIAL SETTING==================== */
 /* MAIN */
 .main {
     width: 100%;
